# anchor-gen

crates/anchor-gen/: Cargo.toml
crates/anchor-generate-cpi-crate/: Cargo.toml
crates/anchor-generate-cpi-interface/: Cargo.toml
crates/anchor-idl/: Cargo.toml
crates/anchor-idl/src/: account.rs  instruction.rs  lib.rs  program.rs  state.rs  typedef.rs
examples/govern-cpi/: Cargo.toml
examples/govern-cpi/src/: lib.rs
examples/marinade-cpi/: Cargo.toml
examples/marinade-cpi/src/: lib.rs
examples/moonshot/: Cargo.toml  README.md  idl.json
examples/moonshot/src/: lib.rs
examples/whirlpools/: Cargo.toml
examples/whirlpools/src/: lib.rs
